feat: implement access request system with NestJS, Prisma, and Swagger

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@org/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "db:seed": "cd apps/access-backend && npx prisma db seed"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^11.0.0",
