--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/server": "^5.4.0",
+    "@as-integrations/express5": "^1.1.2",
+    "@nestjs/apollo": "^13.2.4",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/graphql": "^13.2.4",
     "@nestjs/platform-express": "^11.0.0",
     "@nx/nest": "^22.5.1",
     "axios": "^1.6.0",
+    "graphql": "^16.12.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
