--- a/apps/access-backend/tsconfig.app.json
+++ b/apps/access-backend/tsconfig.app.json
@@ -4,6 +4,10 @@
     "outDir": "dist",
     "types": ["node"],
     "rootDir": ".",
+    "baseUrl": ".",
+    "paths": {
+      "@prisma/client": ["prisma/generated/client"]
+    },
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
