--- a/apps/access-backend/package.json
+++ b/apps/access-backend/package.json
@@ -113,6 +113,6 @@
     "typescript": "^5.9.3"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed-data/seed-employees.ts"
   }
 }
