--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
     "@nx/nest": "^22.5.1",
+    "@prisma/client": "^7.4.1",
     "@types/passport-jwt": "^4.0.1",
     "axios": "^1.6.0",
     "graphql": "^16.12.0",
