--- a/apps/access-backend/package.json
+++ b/apps/access-backend/package.json
@@ -7,8 +7,7 @@
       "prisma-generate": {
         "executor": "nx:run-commands",
         "options": {
-          "command": "npx prisma generate",
-          "cwd": "apps/access-backend"
+          "command": "npx prisma generate --schema apps/access-backend/prisma/schema.prisma"
         }
       },
       "build": {
