--- a/apps/access-backend/tsconfig.spec.json
+++ b/apps/access-backend/tsconfig.spec.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "./out-tsc/jest",
     "types": ["jest", "node"],
+    "typeRoots": ["../../node_modules/@types"],
     "baseUrl": ".",
     "paths": {
       "@prisma/client": ["prisma/generated/client"]
