--- a/package.json
+++ b/package.json
@@ -61,6 +61,12 @@
     "typescript": "~5.9.2",
     "webpack-cli": "^5.1.4"
   },
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14"
+  },
   "workspaces": [
     "packages/*",
     "apps/*"
