--- a/libs/access-sdk/tsconfig.lib.json
+++ b/libs/access-sdk/tsconfig.lib.json
@@ -1,8 +1,11 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "emitDeclarationOnly": false,
+    "noEmit": false,
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    "esModuleInterop": true,
     "resolveJsonModule": true,
     "declaration": true,
     "removeComments": true,
