--- a/apps/access-backend/package.json
+++ b/apps/access-backend/package.json
@@ -119,13 +119,18 @@
     "@nestjs/common": "^11.0.0",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/jwt": "^11.0.2",
     "@nestjs/platform-express": "^11.0.0",
     "@nestjs/swagger": "^11.2.6",
     "@prisma/client": "^6.19.2",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/passport-jwt": "^4.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "cookie-parser": "^1.4.7",
     "express": "^5.2.1",
     "openai": "^6.22.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "swagger-ui-express": "^5.0.1",
@@ -141,6 +146,6 @@
     "typescript": "^5.9.3"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed-data/seed-employees.ts"
+    "seed": "ts-node -r tsconfig-paths/register -P tsconfig.app.json prisma/seed.ts"
   }
 }
