--- a/apps/access-frontend/package.json
+++ b/apps/access-frontend/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.21",
     "@vibe/core": "^3.85.1",
     "@vibe/icons": "^1.16.0",
+    "axios": "^1.13.5",
     "classnames": "^2.5.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
