--- a/apps/access-backend/package.json
+++ b/apps/access-backend/package.json
@@ -11,6 +11,13 @@
           "cwd": "apps/access-backend"
         }
       },
+      "prisma-deploy": {
+        "executor": "nx:run-commands",
+        "options": {
+          "command": "npx prisma migrate deploy",
+          "cwd": "apps/access-backend"
+        }
+      },
       "build": {
         "executor": "nx:run-commands",
         "dependsOn": [
